// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> matches snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="logo.svg"
    />
    <h1>
      Experimenting with tests.
    </h1>
    <h2>
      Including snapshot testing, using react-test-renderer
    </h2>
    <a
      className="App-link"
      href="https://reactjs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Learn React
    </a>
  </header>
  <div>
    <span>
      
    </span>
    <button
      onClick={[Function]}
    >
      Get Message!
    </button>
  </div>
</div>
`;

exports[`<Header /> should match snapshot 1`] = `
<header
  className="App-header"
>
  <img
    alt="logo"
    className="App-logo"
    src="logo.svg"
  />
  <h1>
    Experimenting with tests.
  </h1>
  <h2>
    Including snapshot testing, using react-test-renderer
  </h2>
  <a
    className="App-link"
    href="https://reactjs.org"
    rel="noopener noreferrer"
    target="_blank"
  >
    Learn React
  </a>
</header>
`;
